[gd_scene load_steps=4 format=3 uid="uid://improved_enemy_scene"]

[ext_resource type="Script" path="res://scripts/improved_enemy.gd" id="1_improved"]
[ext_resource type="SpriteFrames" path="res://assets/sprites/enemies/drone_standard.tres" id="2_sprite"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_improved"]
size = Vector2(40, 40)

[node name="ImprovedEnemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_improved")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_improved")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_sprite")
animation = &"hover"
autoplay = "hover"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
target_desired_distance = 10.0
path_postprocessing = 1
avoidance_enabled = true
debug_enabled = false

[node name="RayForward" type="RayCast2D" parent="."]
enabled = true
target_position = Vector2(100, 0)
collision_mask = 12
hit_from_inside = true

[node name="RayLeft45" type="RayCast2D" parent="."]
enabled = true
target_position = Vector2(70.7, -70.7)
collision_mask = 12
hit_from_inside = true

[node name="RayRight45" type="RayCast2D" parent="."]
enabled = true
target_position = Vector2(70.7, 70.7)
collision_mask = 12
hit_from_inside = true

[node name="RayLeft90" type="RayCast2D" parent="."]
enabled = true
target_position = Vector2(0, -100)
collision_mask = 12
hit_from_inside = true

[node name="RayRight90" type="RayCast2D" parent="."]
enabled = true
target_position = Vector2(0, 100)
collision_mask = 12
hit_from_inside = true
